infrastructure/k8s/utils/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
spec:
  ingressClassName: public
  rules:
  - http:
      paths:
      - path: /api/v1/auth
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 80
  - http:
      paths:
      - path: /api/v1/notes
        pathType: Prefix
        backend:
          service:
            name: notes
            port:
              number: 80
